<resources>
    <string name="app_name">PatchHole</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_sign_up">New? Sign Up!</string>
    <string name="passwordhint">password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="apply_for_people_representative">People Representative? Apply here!</string>
    <string name="about_us">About Us</string>
    <string name="a_small_step_toward_an_incredible_goa">A small step towards an Incredible Goa</string>
    <string name="email">email</string>
    <string name="logo">logo</string>
    <string name="splashscreenlogo">splashscreenlogo</string>
</resources>