<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    tools:context=".MainActivity"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="178dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:src="@drawable/patchholelogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="cursive"
            android:text="@string/a_small_step_toward_an_incredible_goa"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:autofillHints=""
            android:background="@drawable/edit"
            android:drawableStart="@drawable/ic_action_email"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColorHint="#804A4747"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:background="@drawable/edit"
            android:drawableStart="@drawable/ic_action_pass"
            android:drawablePadding="10dp"
            android:hint="@string/passwordhint"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColorHint="#804A4747"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/forgot_password"
            android:textColor="#EDE7F6"
            android:textSize="15sp" />

        <Button
            android:id="@+id/Login"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:text="@string/login"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/new_sign_up"
            android:textColor="#E8EAF6"
            android:textSize="15sp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/apply_for_people_representative"
            android:textColor="#E8EAF6"
            android:textSize="15sp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/about_us"
            android:textColor="#E8EAF6"
            android:textSize="15sp"

            />
    </LinearLayout>

</LinearLayout>